--- a/main.html
+++ b/main.html
@@ -7,14 +7,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>S Launcher</title>
-    <link rel="stylesheet" href="css/appcraft.css">
+    <!--<link rel="stylesheet" href="css/appcraft.css">-->
     <link rel="stylesheet" href="css/new.css">
     <link rel="stylesheet" href="css/material-ui.css" />
     <link rel="stylesheet" href="css/owl.css" />
     <link rel="stylesheet" href="css/ajnim.css" />
       <link rel="stylesheet" href="css/newcss.css" />
 		<script src = "js/jquery2.js"></script>
-    <!--<script src="cordova.js" id="xdkJScordova_"></script>-->
+    <script src="cordova.js" id="xdkJScordova_"></script>
 	<script>
 		function loadnew(){
 			document.addEventListener('deviceready', startApp, false);
