--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>S Launcher</title>
-    <!--<link rel="stylesheet" href="css/appcraft.css">-->
+    <link rel="stylesheet" href="css/appcraft.css">
     <link rel="stylesheet" href="css/new.css">
     <link rel="stylesheet" href="css/material-ui.css" />
     <link rel="stylesheet" href="css/owl.css" />
