--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 var connStatus = localStorage.getItem("connStatus");
                 if(connStatus == "connected"){
                 //if(checkingImg() == true){
-                    //alert("Connected!");
+                    alert("Connected!");
                 }else{
-                    //alert("Not connected!");
+                    alert("Not connected!");
                 }
             }
             
